Documenting TourGuideService with optimized methods